# random-windows-wallpaper

./: Cargo.toml  build.rs  icon.res  readme  readme.md
src/: main.rs
