[package]
name = "wallpaper_windows_ramdomly"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
image = "0.24"
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
winreg = "0.11"
dirs = "5.0"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
icon = "icon.ico"
